--- a/checkers/index.html
+++ b/checkers/index.html
@@ -2,6 +2,8 @@
     <link rel="stylesheet" href="checkers.css">
     <body>
         <div id="checkers"></div>
+        <div id="title"></div>
+        <div id="instructions"></div>
         <script src="http://fb.me/react-0.11.1.js"></script>
         <script src="out/goog/base.js" type="text/javascript"></script>
         <script src="checkers.js" type="text/javascript"></script>
