--- a/checkers/index.html
+++ b/checkers/index.html
@@ -1,9 +1,11 @@
 <html>
     <link rel="stylesheet" href="checkers.css">
+    <link href='http://fonts.googleapis.com/css?family=Roboto:700|Slabo+27px' rel='stylesheet' type='text/css'>
     <body>
-        <div id="checkers"></div>
+        <div id="checkers" style="float: left; padding-right: 10px"></div>
         <div id="title"></div>
         <div id="instructions"></div>
+        <div id="system-output"></div>
         <script src="http://fb.me/react-0.11.1.js"></script>
         <script src="out/goog/base.js" type="text/javascript"></script>
         <script src="checkers.js" type="text/javascript"></script>
