Added rules. Starting win detection

--- a/checkers/index.html
+++ b/checkers/index.html
@@ -4,6 +4,7 @@
     <body>
         <div id="checkers" style="float: left; padding-right: 10px"></div>
         <div id="title"></div>
+        <div id="rules"></div>
         <div id="instructions"></div>
         <div id="system-output"></div>
         <script src="http://fb.me/react-0.11.1.js"></script>
