--- a/checkers/index.html
+++ b/checkers/index.html
@@ -6,6 +6,7 @@
         <div id="title"></div>
         <div id="rules"></div>
         <div id="instructions"></div>
+        <div id="wins"></div>
         <div id="system-output"></div>
         <script src="http://fb.me/react-0.11.1.js"></script>
         <script src="out/goog/base.js" type="text/javascript"></script>
